# RenegadeX-Extensions

./: .gitignore  Cargo.toml  Cross.toml  README.md
.github/workflows/: Win32.yml  Win64.yml  Windows.yml
src/: dinput8.rs  dll.rs  lib.rs  udk_log.rs  udk_offsets.rs  udk_xaudio.rs  xapofx.rs  xaudio27.rs
winbindings/: Cargo.toml  build.rs
winbindings/src/: lib.rs
