[package]
name = "renxhook"
version = "0.1.0"
edition = "2018"

[workspace]
members = ["winbindings"]

[lib]
name = "dinput8"
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.51"
com = "0.6.0"
detour = { git = "https://github.com/Hpmason/detour-rs", branch = "fix-nightly1.67.0-changes" }
lazy_static = "1.4.0"
libloading = "0.7.2"
sha2 = "0.10.0"
widestring = "0.5.1"
winbindings = { path = "./winbindings" }
