[package]
name = "renxhook"
version = "0.1.0"
edition = "2018"

[lib]
name = "dinput8"
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.51"
detour = { git = "https://github.com/Hpmason/detour-rs", branch = "fix-nightly1.67.0-changes" }
lazy_static = "1.4.0"
libloading = "0.7.2"
sha2 = "0.10.0"
widestring = "1.0.2"
zerocopy = "0.6.1"
paste = "1.0.11"
region = "3.0.0"

[dependencies.windows]
version = "0.43.0"
features = [
	"interface",
	"implement",
    "Data_Xml_Dom",
    "Win32_Devices_HumanInterfaceDevice",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Com",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_LibraryLoader",
    "Win32_System_ProcessStatus",
    "Win32_System_SystemInformation",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
	"Win32_Media_Audio",
	"Win32_Media_Audio_XAudio2",
	"Win32_Media_Multimedia",
]
